[Extensions] Canonicalize URLPattern hosts

Ensure that URLPattern hosts, when non-empty, are canonicalized.
Silently update non-canonical hosts (e.g. gOOgle.com) to be
canonical (google.com). Fail only if canonicalization fails.

Bug: 811932

Change-Id: I87dbea12b972af00a7648f6d715eccb836613366
Reviewed-on: https://chromium-review.googlesource.com/916942
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538659}
Former-commit-id: b32af8c5a5f828415c028e6a4725d3349003def1