extensions/common/url_pattern_unittest.cc
@@ -9,6 +9,7 @@
 #include <memory>
 
 #include "base/macros.h"
+#include "base/strings/stringprintf.h"
 #include "extensions/common/constants.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "url/gurl.h"
@@ -190,7 +191,8 @@ TEST(ExtensionURLPatternTest, Match7) {
   // allowed, but useless
   EXPECT_EQ(URLPattern::PARSE_SUCCESS, pattern.Parse("http://*.0.0.1/*"));
   EXPECT_EQ("http", pattern.scheme());
-  EXPECT_EQ("0.0.1", pattern.host());
+  // Canonicalization forces 0.0.1 to 0.0.0.1.
+  EXPECT_EQ("0.0.0.1", pattern.host());
   EXPECT_TRUE(pattern.match_subdomains());
   EXPECT_TRUE(pattern.match_effective_tld());
   EXPECT_FALSE(pattern.match_all_urls());
@@ -489,19 +491,19 @@ TEST(URLPatternTest, EffectiveTldWildcard) {
 static const struct GetAsStringPatterns {
   const char* pattern;
 } kGetAsStringTestCases[] = {
-  { "http://www/" },
-  { "http://*/*" },
-  { "chrome://*/*" },
-  { "chrome://newtab/" },
-  { "about:*" },
-  { "about:blank" },
-  { "chrome-extension://*/*" },
-  { "chrome-extension://FTW/" },
-  { "data:*" },
-  { "data:monkey" },
-  { "javascript:*" },
-  { "javascript:atemyhomework" },
-  { "http://www.example.com:8080/foo" },
+    {"http://www/"},
+    {"http://*/*"},
+    {"chrome://*/*"},
+    {"chrome://newtab/"},
+    {"about:*"},
+    {"about:blank"},
+    {"chrome-extension://*/*"},
+    {"chrome-extension://ftw/"},
+    {"data:*"},
+    {"data:monkey"},
+    {"javascript:*"},
+    {"javascript:atemyhomework"},
+    {"http://www.example.com:8080/foo"},
 };
 
 TEST(ExtensionURLPatternTest, GetAsString) {
@@ -984,6 +986,43 @@ TEST(ExtensionURLPatternTest, MatchesEffectiveTLD) {
     EXPECT_EQ(test.matches_public_or_private_tld,
               pattern.MatchesEffectiveTld(rcd::INCLUDE_PRIVATE_REGISTRIES))
         << test.pattern;
+  }
+}
+
+// Test that URLPattern properly canonicalizes uncanonicalized hosts.
+TEST(ExtensionURLPatternTest, UncanonicalizedUrl) {
+  {
+    // Simple case: canonicalization should lowercase the host. This is
+    // important, since gOoGle.com would never be matched in practice.
+    const URLPattern pattern(URLPattern::SCHEME_ALL, "*://*.gOoGle.com/*");
+    EXPECT_TRUE(pattern.MatchesURL(GURL("https://google.com")));
+    EXPECT_TRUE(pattern.MatchesURL(GURL("https://maps.google.com")));
+    EXPECT_FALSE(pattern.MatchesURL(GURL("https://example.com")));
+    EXPECT_EQ("*://*.google.com/*", pattern.GetAsString());
+  }
+
+  {
+    // Trickier case: internationalization with UTF8 characters (the first 'g'
+    // isn't actually a 'g').
+    const URLPattern pattern(URLPattern::SCHEME_ALL, "https://*.ɡoogle.com/*");
+    constexpr char kCanonicalizedHost[] = "xn--oogle-qmc.com";
+    EXPECT_EQ(kCanonicalizedHost, pattern.host());
+    EXPECT_EQ(base::StringPrintf("https://*.%s/*", kCanonicalizedHost),
+              pattern.GetAsString());
+    EXPECT_FALSE(pattern.MatchesURL(GURL("https://google.com")));
+    // The pattern should match the canonicalized host, and the original
+    // UTF8 version.
+    EXPECT_TRUE(pattern.MatchesURL(
+        GURL(base::StringPrintf("https://%s/", kCanonicalizedHost))));
+    EXPECT_TRUE(pattern.MatchesHost("ɡoogle.com"));
+  }
+
+  {
+    // Sometimes, canonicalization can fail (such as here, where we have invalid
+    // unicode characters). In that case, URLPattern parsing should also fail.
+    URLPattern pattern(URLPattern::SCHEME_ALL);
+    EXPECT_EQ(URLPattern::PARSE_ERROR_INVALID_HOST,
+              pattern.Parse("https://\xef\xb7\x90zyx.com/*"));
   }
 }
 
